# aicon

./: .env.prod.example  .eslintignore  .gitignore  .prettierignore  README.md  deploy.txt  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.local.json
.claude/agents/: code-refactor-expert.md  senior-architect-coder.md
backend/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
backend/docs/: video_synthesis_usage.md
backend/migrations/: README.md  alembic.ini  env.py  script.py.mako
backend/migrations/versions/: 003_add_archived_status.py  004_create_content_tables.py  006_create_video_tasks_table.py  009_add_is_admin_to_users.py  010_create_system_settings_table.py  011_add_storage_config.py  012_create_storage_sources_table.py  __init__.py
backend/scripts/: test_single_sentence_video.py
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  health.py  middleware.py  websocket.py
backend/src/api/schemas/: auth.py  bgm.py  image.py  prompt.py  task.py  user.py
backend/src/api/v1/: __init__.py  admin.py  api_keys.py  auth.py  bgms.py  chapters.py  files.py  image.py  paragraphs.py  projects.py  prompt.py  tasks.py  users.py
backend/src/core/: config.py  database.py  logging.py  security.py
backend/src/middleware/: auth.py  error.py  logging.py
backend/src/models/: __init__.py  chapter.py  project.py  sentence.py  storage_source.py  system_setting.py  user.py  video_task.py
backend/src/services/: __init__.py  api_key.py  audio.py  avatar.py  base.py  bgm_service.py  chapter.py  faster_whisper_service.py  image.py  material_service.py  paragraph.py  project.py  project_processing.py  prompt.py  sentence.py  subtitle_service.py  text_parser.py  video.py  video_composition_service.py  video_synthesis.py  video_task.py
backend/src/services/provider/: custom_provider.py  factory.py
backend/src/tasks/: file_processing.py  task.py
backend/src/utils/: __init__.py  ffmpeg_utils.py  storage.py  text_utils.py
backend/src/workers/: __init__.py
backend/tests/: conftest.py
backend/tests/unit/: test_project_service.py  test_storage.py  test_text_parser.py
frontend/: Dockerfile  nginx.conf  package.json  vite.config.js
frontend/src/assets/styles/: main.css
frontend/src/components/bgm/: UploadBGMDialog.vue
frontend/src/components/chapter/: ChapterDetail.vue  ChapterForm.vue  ChapterList.vue
frontend/src/components/common/: PageNavigation.vue
frontend/src/components/layout/: AppSidebar.vue  AuthLayout.vue  MainLayout.vue
frontend/src/components/project/: ProjectCard.vue  ProjectDetail.vue  ProjectEditor.vue  ProjectGridView.vue  ProjectList.vue
frontend/src/components/studio/: BatchGenerateImagesDialog.vue  ChapterFormDialog.vue  ChapterNav.vue  GenerateAudioDialog.vue  GeneratePromptsDialog.vue  MaterialCheckDialog.vue  MaterialPreviewDialog.vue  ParagraphStream.vue  RegeneratePromptsDialog.vue  SentenceCard.vue  SentenceInspector.vue
frontend/src/components/video/: CreateVideoTaskDialog.vue
frontend/src/composables/: useBGM.js  useTaskPoller.js
frontend/src/router/: guards.js  index.js
frontend/src/services/: admin.js  api.js  auth.js  bgm.js  chapters.js  paragraphs.js  projects.js
frontend/src/stores/: auth.js  projects.js  system.js
frontend/src/views/: APIKeys.vue  BGMManagement.vue  Dashboard.vue  Login.vue  ProjectDetail.vue  Projects.vue  Publish.vue  Register.vue  Settings.vue
frontend/src/views/admin/: StorageSettings.vue  UserManagement.vue
frontend/src/views/chapters/: ChapterManagement.vue
frontend/src/views/studio/: ContentStudio.vue  DirectorEngine.vue
scripts/: deploy.sh  init-db.sql
specs/001-aicg-platform/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/001-aicg-platform/contracts/: api-contracts.md
